# super-thumb-test-advance

./: .gitignore  CMakeLists.txt  main.c
32blit/: CMakeLists.txt  main.cpp  metadata.yml
assets/: 8x8font.h
gba/: CMakeLists.txt  main.c
tests/: load_store_tests.c  load_store_tests.h  tests.c  tests.h  tests_common.h  thumb2_data_processing_tests.c  thumb2_data_processing_tests.h
